# sigmod

./: Cargo.toml  README.md  docker-compose.yml
crates/ai/: Cargo.toml
crates/ai/src/: lib.rs  openai.rs
crates/ai/src/client/: classify.rs  mod.rs
crates/ai/src/client/chat/: mod.rs  tool.rs
crates/ai/src/client/ext/: bearer.rs  mod.rs
crates/ai/src/error/: mod.rs  parse.rs
crates/ai/src/local/: classify.rs
crates/ai/src/model/: chat.rs  classify.rs  error.rs  mod.rs  provider.rs  registry.rs
crates/ai/src/model/chat/: format.rs  message.rs  mod.rs
crates/ai/tests/: openai.rs
crates/amqp/: Cargo.toml
crates/amqp/src/: consumer.rs  event.rs  key.rs  lib.rs  producer.rs  socket.rs
crates/error/: Cargo.toml
crates/error/src/: group.rs  lib.rs
crates/eval/: Cargo.toml
crates/eval/src/: consensus.rs  decision.rs  input.rs  label.rs  lib.rs  meta.rs  metric.rs  model.rs  output.rs  run.rs  score.rs
crates/eval/src/classifier/: category.rs  input.rs  label.rs  mod.rs  output.rs
crates/eval/src/judge/: criterion.rs  input.rs  mod.rs  output.rs
crates/eval/src/math/: mod.rs  weighted_avg.rs
crates/eval/tests/: run.rs
crates/storage/: Cargo.toml  README.md
crates/storage/migrations/: 001_create_memories.sql  001_create_workspaces.sql  002_create_facets.sql  002_create_projects.sql  003_create_scorers.sql  003_create_sources.sql  004_create_memory_sources.sql  004_create_runs.sql  005_add_scorers_last_run_id.sql  005_create_traces.sql  006_create_trace_actions.sql
crates/storage/src/: facet_storage.rs  lib.rs  memory_source_storage.rs  memory_storage.rs  project.rs  run_storage.rs  scorer_storage.rs  source_storage.rs  trace_action_storage.rs  trace_storage.rs  workspace_storage.rs
crates/storage/src/entity/: facet.rs  memory.rs  memory_source.rs  mod.rs  project.rs  run.rs  run_status.rs  scorer.rs  scorer_type.rs  sensitivity.rs  source.rs  status.rs  trace.rs  trace_action.rs  workspace.rs
services/api/: Cargo.toml  Dockerfile
services/api/src/: config.rs  context.rs  main.rs  request_context.rs
services/api/src/routes/: chat.http  console.rs  evals.http  evals.rs  index.rs  ingest.rs  mod.rs
services/api/templates/: base.html
services/api/templates/console/: page.html
services/api/templates/console/partials/: category.html  criterion.html  label.html  result.html  scorer_classifier.html  scorer_judge.html
services/worker/: Cargo.toml  Dockerfile
services/worker/src/: main.rs
