[workspace]
resolver = "3"
members = ["crates/*", "services/*"]
default-members = ["crates/*", "services/*"]

[workspace.package]
publish = false
version = "0.0.0"
edition = "2024"
license = "MIT"
readme = "README.md"
documentation = "https://www.github.com/aacebo/sigmod"
homepage = "https://www.github.com/aacebo/sigmod"
repository = "https://www.github.com/aacebo/sigmod"

[workspace.dependencies]
async-trait = { version = "0.1" }
ulid = { version = "1", features = ["serde"] }
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["default", "derive"] }
serde_json = { version = "1" }
serde_valid = { version = "2" }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono", "json"] }
