[package]
name = "ai"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
tch = "0.17"
console = "0.16"
rust-bert = "0.23"
url = { version = "2.4", features = ["serde"] }
reqwest = { version = "0.13", features = ["json", "query"] }
serde.workspace = true
async-trait.workspace = true
