[package]
name = "amqp"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
lapin = "2"
futures-lite = "2"
error.path = "../error"
uuid.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
