[package]
name = "eval"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_valid.workspace = true
