[package]
name = "worker"
publish.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
documentation.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
amqp.path = "../../crates/amqp"
error.path = "../../crates/error"
serde.workspace = true
tokio = { version = "1", features = ["full"] }
